[UPDATE] 안드로이드 기본

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GeoQuiz">
-        <activity android:name=".ViewModel.ViewModelStudy">
+        <activity android:name=".LiveData.LiveData">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".geoquizapp.MainActivity">
-        </activity>
+        <activity android:name=".ViewModel.ViewModelStudy"></activity>
+        <activity android:name=".geoquizapp.MainActivity"></activity>
     </application>
 
 </manifest>
